--- a/openai-quickstart-node-master/package.json
+++ b/openai-quickstart-node-master/package.json
@@ -16,5 +16,10 @@
   },
   "engines": {
     "node": ">=14.6.0"
-  }
+  },
+  "description": "This is an example pet name generator app used in the OpenAI API [quickstart tutorial](https://platform.openai.com/docs/quickstart). It uses the [Next.js](https://nextjs.org/) framework with [React](https://reactjs.org/). Check out the tutorial or follow the instructions below to get set up.",
+  "main": "index.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
 }
